Deployed model + scoring using random data

--- a/AML-getting-started/mnist-simple-log-regression-model.ipynb
+++ b/AML-getting-started/mnist-simple-log-regression-model.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T13:19:40.168662Z",
+     "start_time": "2019-12-27T13:19:40.165660Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Useful resources:\n",
+    "# * https://github.com/Azure/MachineLearningNotebooks/blob/master/how-to-use-azureml/deployment/deploy-to-local/register-model-deploy-local-advanced.ipynb"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12,8 +27,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-27T08:20:03.874466Z",
-     "start_time": "2019-12-27T08:19:51.920316Z"
+     "end_time": "2019-12-27T10:53:30.900106Z",
+     "start_time": "2019-12-27T10:53:24.551299Z"
     }
    },
    "outputs": [],
@@ -45,8 +60,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-27T08:20:49.111112Z",
-     "start_time": "2019-12-27T08:20:49.102114Z"
+     "end_time": "2019-12-27T10:53:40.098083Z",
+     "start_time": "2019-12-27T10:53:40.090082Z"
     }
    },
    "outputs": [],
@@ -78,8 +93,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-27T08:20:52.275665Z",
-     "start_time": "2019-12-27T08:20:51.853715Z"
+     "end_time": "2019-12-27T10:53:43.845194Z",
+     "start_time": "2019-12-27T10:53:43.417192Z"
     }
    },
    "outputs": [],
@@ -100,8 +115,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-27T08:20:57.419038Z",
-     "start_time": "2019-12-27T08:20:57.414042Z"
+     "end_time": "2019-12-27T10:53:48.438162Z",
+     "start_time": "2019-12-27T10:53:48.433166Z"
     }
    },
    "outputs": [],
@@ -121,8 +136,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-27T08:21:00.674726Z",
-     "start_time": "2019-12-27T08:20:59.309597Z"
+     "end_time": "2019-12-27T10:53:51.759552Z",
+     "start_time": "2019-12-27T10:53:50.514377Z"
     }
    },
    "outputs": [],
@@ -203,8 +218,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-27T08:21:27.550342Z",
-     "start_time": "2019-12-27T08:21:27.545339Z"
+     "end_time": "2019-12-27T10:53:58.278985Z",
+     "start_time": "2019-12-27T10:53:58.273956Z"
     }
    },
    "outputs": [],
@@ -231,8 +246,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-27T08:21:29.204575Z",
-     "start_time": "2019-12-27T08:21:29.201570Z"
+     "end_time": "2019-12-27T10:53:59.645648Z",
+     "start_time": "2019-12-27T10:53:59.642647Z"
     }
    },
    "outputs": [],
@@ -247,8 +262,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-27T08:23:03.326711Z",
-     "start_time": "2019-12-27T08:21:51.374274Z"
+     "end_time": "2019-12-27T10:54:02.328240Z",
+     "start_time": "2019-12-27T10:54:00.913204Z"
     }
    },
    "outputs": [],
@@ -297,8 +312,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-27T08:24:08.380267Z",
-     "start_time": "2019-12-27T08:24:05.865226Z"
+     "end_time": "2019-12-27T10:54:10.379072Z",
+     "start_time": "2019-12-27T10:54:09.810268Z"
     }
    },
    "outputs": [],
@@ -323,8 +338,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-27T08:24:13.212150Z",
-     "start_time": "2019-12-27T08:24:11.567762Z"
+     "end_time": "2019-12-27T10:55:24.849396Z",
+     "start_time": "2019-12-27T10:55:23.914318Z"
     }
    },
    "outputs": [],
@@ -365,8 +380,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-27T08:32:55.036119Z",
-     "start_time": "2019-12-27T08:32:52.605479Z"
+     "end_time": "2019-12-27T10:54:36.548609Z",
+     "start_time": "2019-12-27T10:54:34.400179Z"
     }
    },
    "outputs": [],
@@ -390,8 +405,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-27T08:32:59.665374Z",
-     "start_time": "2019-12-27T08:32:59.659378Z"
+     "end_time": "2019-12-27T10:54:38.594225Z",
+     "start_time": "2019-12-27T10:54:38.590223Z"
     }
    },
    "outputs": [],
@@ -399,7 +414,7 @@
     "import os\n",
     "\n",
     "# create the folder\n",
-    "folder_training_script = './trial_model_mnist'\n",
+    "folder_training_script = './trial_model_mnist/train'\n",
     "os.makedirs(folder_training_script, exist_ok=True)\n",
     "\n",
     "print('Done')"
@@ -410,8 +425,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-27T10:12:45.885664Z",
-     "start_time": "2019-12-27T10:12:45.876647Z"
+     "end_time": "2019-12-27T10:54:59.526664Z",
+     "start_time": "2019-12-27T10:54:59.518654Z"
     }
    },
    "outputs": [],
@@ -558,13 +573,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T10:20:58.336138Z",
-     "start_time": "2019-12-24T10:20:54.614026Z"
+     "end_time": "2019-12-27T13:17:02.452300Z",
+     "start_time": "2019-12-27T13:15:19.577778Z"
     }
    },
    "outputs": [],
    "source": [
-    "! python ./trial_model_mnist/train.py --data-folder=. --regularization=0.6 --local=True"
+    "! python ./trial_model_mnist/train/train.py --data-folder=. --regularization=0.6 --local=True"
    ]
   },
   {
@@ -579,8 +594,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-27T10:12:50.124140Z",
-     "start_time": "2019-12-27T10:12:50.083947Z"
+     "end_time": "2019-12-27T10:55:29.287026Z",
+     "start_time": "2019-12-27T10:55:29.242865Z"
     }
    },
    "outputs": [],
@@ -608,8 +623,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-27T10:13:02.196928Z",
-     "start_time": "2019-12-27T10:12:52.358599Z"
+     "end_time": "2019-12-27T10:55:41.272909Z",
+     "start_time": "2019-12-27T10:55:30.816865Z"
     }
    },
    "outputs": [],
@@ -631,6 +646,396 @@
    "source": [
     "# Get the result\n",
     "print(run.get_metrics())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Deploy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T12:45:24.523336Z",
+     "start_time": "2019-12-27T12:45:24.518335Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "os.chdir('../..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T12:45:25.561998Z",
+     "start_time": "2019-12-27T12:45:25.557000Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create folder structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T12:45:27.561518Z",
+     "start_time": "2019-12-27T12:45:27.558516Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# create the folder\n",
+    "folder_scoring_script = './trial_model_mnist/score'\n",
+    "\n",
+    "os.makedirs(folder_scoring_script, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a scoring file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T12:46:00.713776Z",
+     "start_time": "2019-12-27T12:46:00.706779Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%writefile $folder_scoring_script/score.py\n",
+    "\n",
+    "from sklearn.externals import joblib\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from azureml.core.model import Model\n",
+    "import numpy\n",
+    "import json\n",
+    "\n",
+    "def init():\n",
+    "    global model\n",
+    "    # get latest version of the model from the Machine Learning Model Registry\n",
+    "    model_path = Model.get_model_path('sklearn_mnist')\n",
+    "    print(f\"Model path: {model_path}\")\n",
+    "    # deserialize the model file back into a sklearn model\n",
+    "    model = joblib.load(model_path)\n",
+    "\n",
+    "# note you can pass in multiple rows for scoring\n",
+    "def run(raw_data):\n",
+    "    try:\n",
+    "        data = json.loads(raw_data)['data']\n",
+    "        data = numpy.array(data)\n",
+    "        result = model.predict(data)\n",
+    "        # you can return any datatype if it is JSON-serializable\n",
+    "        return result.tolist()\n",
+    "    except Exception as e:\n",
+    "        error = str(e)\n",
+    "        return error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create the environment YAML file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T12:46:03.207179Z",
+     "start_time": "2019-12-27T12:46:03.193177Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from azureml.core.conda_dependencies import CondaDependencies \n",
+    "\n",
+    "myenv = CondaDependencies.create(conda_packages=['numpy','scikit-learn'])\n",
+    "\n",
+    "with open(os.path.join(folder_scoring_script, \"myenv.yml\"),\"w\") as f:\n",
+    "    f.write(myenv.serialize_to_string())\n",
+    "\n",
+    "print('Done')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get latest ML model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T12:46:11.673600Z",
+     "start_time": "2019-12-27T12:46:06.737590Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from azureml.core.model import Model\n",
+    "\n",
+    "# get the model object representing the last machine learning model\n",
+    "latest_model = Model.list(ws, name='sklearn_mnist', latest=True)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T12:46:14.847227Z",
+     "start_time": "2019-12-27T12:46:14.842226Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "latest_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T11:10:38.058602Z",
+     "start_time": "2019-12-27T11:10:38.054609Z"
+    }
+   },
+   "source": [
+    "## Create a container image for a trained model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T12:46:21.991403Z",
+     "start_time": "2019-12-27T12:46:21.983405Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%cd $folder_scoring_script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T12:56:31.853419Z",
+     "start_time": "2019-12-27T12:53:58.821181Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from azureml.core.image import Image, ContainerImage\n",
+    "\n",
+    "image_config = ContainerImage.image_configuration(runtime= \"python\",\n",
+    "                                 execution_script=\"score.py\",\n",
+    "                                 conda_file=\"myenv.yml\",\n",
+    "                                 tags = {'data': \"MNIST\", 'type': \"sklearn\"},\n",
+    "                                 description = \"Image for sklearn model\")\n",
+    "\n",
+    "image = Image.create(name = \"myimage1\",\n",
+    "                     # this is the model object \n",
+    "                     models = [latest_model],\n",
+    "                     image_config = image_config, \n",
+    "                     workspace = ws)\n",
+    "\n",
+    "image.wait_for_creation(show_output = True)\n",
+    "\n",
+    "print('Done')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deploy the model as a web service"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T12:56:48.116699Z",
+     "start_time": "2019-12-27T12:56:48.107700Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from azureml.core.webservice import AciWebservice\n",
+    "\n",
+    "aciconfig = AciWebservice.deploy_configuration(cpu_cores = 1, \n",
+    "                                          memory_gb = 2, \n",
+    "                                          tags = {\"data\": \"mnist\", \"type\": \"sklearn\"}, \n",
+    "                                          description = 'Handwriting recognition')\n",
+    "\n",
+    "print('Done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T12:58:13.474078Z",
+     "start_time": "2019-12-27T12:56:52.555917Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from azureml.core.webservice import Webservice\n",
+    "\n",
+    "service_name = 'aci-mnist-2'\n",
+    "\n",
+    "service = Webservice.deploy_from_image(deployment_config = aciconfig,\n",
+    "                                            image = image,\n",
+    "                                            name = service_name,\n",
+    "                                            workspace = ws, \n",
+    "                                            overwrite=True)\n",
+    "\n",
+    "service.wait_for_deployment(show_output = True)\n",
+    "\n",
+    "print('Done')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Score data with the deployed model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T12:59:24.665864Z",
+     "start_time": "2019-12-27T12:59:24.660863Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#os.chdir('../..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T12:59:26.419703Z",
+     "start_time": "2019-12-27T12:59:26.415702Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T12:59:35.614562Z",
+     "start_time": "2019-12-27T12:59:35.530816Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "\n",
+    "import gzip\n",
+    "import struct\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "# load compressed MNIST gz files and return numpy arrays\n",
+    "def load_data(filename, label=False):\n",
+    "    with gzip.open(filename) as gz:\n",
+    "        struct.unpack('I', gz.read(4))\n",
+    "        n_items = struct.unpack('>I', gz.read(4))\n",
+    "        if not label:\n",
+    "            n_rows = struct.unpack('>I', gz.read(4))[0]\n",
+    "            n_cols = struct.unpack('>I', gz.read(4))[0]\n",
+    "            res = np.frombuffer(gz.read(n_items[0] * n_rows * n_cols), dtype=np.uint8)\n",
+    "            res = res.reshape(n_items[0], n_rows * n_cols)\n",
+    "        else:\n",
+    "            res = np.frombuffer(gz.read(n_items[0]), dtype=np.uint8)\n",
+    "            res = res.reshape(n_items[0], 1)\n",
+    "    return res\n",
+    "\n",
+    "data_folder = os.path.join(os.getcwd(), 'data', 'mnist')\n",
+    "\n",
+    "# note we also shrink the intensity values (X) from 0-255 to 0-1. This helps the neural network converge faster\n",
+    "X_test = load_data(os.path.join(data_folder, 'test-images.gz'), False) / 255.0\n",
+    "y_test = load_data(os.path.join(data_folder, 'test-labels.gz'), True).reshape(-1)\n",
+    "\n",
+    "print('Done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-27T13:04:40.104879Z",
+     "start_time": "2019-12-27T13:04:40.034661Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "# send a random row from the test set to score\n",
+    "random_index = np.random.randint(0, len(X_test)-1)\n",
+    "input_data = \"{\\\"data\\\": [\" + str(list(X_test[random_index])) + \"]}\"\n",
+    "\n",
+    "headers = {'Content-Type': 'application/json'}\n",
+    "\n",
+    "# for AKS deployment you'd need to include the service key in the header as well\n",
+    "# api_key = service.get_key()\n",
+    "# headers = {'Content-Type':'application/json',  'Authorization':('Bearer '+ api_key)} \n",
+    "\n",
+    "resp = requests.post(service.scoring_uri, input_data, headers=headers)\n",
+    "\n",
+    "print(\"POST to url\", service.scoring_uri)\n",
+    "#print(\"input data:\", input_data)\n",
+    "print(\"label:\", y_test[random_index])\n",
+    "print(\"prediction:\", resp.text)"
    ]
   }
  ],
@@ -661,9 +1066,14 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "384px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
