Publishing pipeline (as an extra option).

--- a/AML-getting-started/First Pipeline.ipynb
+++ b/AML-getting-started/First Pipeline.ipynb
@@ -33,8 +33,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-31T14:37:29.018108Z",
-     "start_time": "2019-12-31T14:37:27.664099Z"
+     "end_time": "2020-01-03T09:08:46.318408Z",
+     "start_time": "2020-01-03T09:08:44.709176Z"
     }
    },
    "outputs": [],
@@ -57,8 +57,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-31T14:37:35.972564Z",
-     "start_time": "2019-12-31T14:37:34.288699Z"
+     "end_time": "2020-01-03T09:08:51.755661Z",
+     "start_time": "2020-01-03T09:08:49.027165Z"
     }
    },
    "outputs": [],
@@ -112,8 +112,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-31T14:38:07.301499Z",
-     "start_time": "2019-12-31T14:37:44.871099Z"
+     "end_time": "2020-01-03T09:09:00.223039Z",
+     "start_time": "2020-01-03T09:08:59.045661Z"
     }
    },
    "outputs": [],
@@ -149,8 +149,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-31T14:38:10.636481Z",
-     "start_time": "2019-12-31T14:38:10.495236Z"
+     "end_time": "2020-01-03T09:09:22.358670Z",
+     "start_time": "2020-01-03T09:09:21.895596Z"
     }
    },
    "outputs": [],
@@ -173,8 +173,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-31T14:38:12.275850Z",
-     "start_time": "2019-12-31T14:38:12.271847Z"
+     "end_time": "2020-01-03T09:09:24.924371Z",
+     "start_time": "2020-01-03T09:09:24.919369Z"
     }
    },
    "outputs": [],
@@ -195,8 +195,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-31T14:38:13.947910Z",
-     "start_time": "2019-12-31T14:38:13.943909Z"
+     "end_time": "2020-01-03T09:09:27.354942Z",
+     "start_time": "2020-01-03T09:09:27.350942Z"
     }
    },
    "outputs": [],
@@ -219,8 +219,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-31T14:38:15.546562Z",
-     "start_time": "2019-12-31T14:38:15.543587Z"
+     "end_time": "2020-01-03T09:09:29.918540Z",
+     "start_time": "2020-01-03T09:09:29.911539Z"
     }
    },
    "outputs": [],
@@ -233,8 +233,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-31T14:38:16.595261Z",
-     "start_time": "2019-12-31T14:38:16.591260Z"
+     "end_time": "2020-01-03T09:09:30.798305Z",
+     "start_time": "2020-01-03T09:09:30.793342Z"
     }
    },
    "outputs": [],
@@ -247,8 +247,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-31T14:38:17.740404Z",
-     "start_time": "2019-12-31T14:38:17.735381Z"
+     "end_time": "2020-01-03T09:09:31.499429Z",
+     "start_time": "2020-01-03T09:09:31.495429Z"
     }
    },
    "outputs": [],
@@ -280,8 +280,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-31T14:38:20.689350Z",
-     "start_time": "2019-12-31T14:38:20.661883Z"
+     "end_time": "2020-01-03T09:09:33.753493Z",
+     "start_time": "2020-01-03T09:09:33.710571Z"
     }
    },
    "outputs": [],
@@ -306,8 +306,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-31T14:38:22.306978Z",
-     "start_time": "2019-12-31T14:38:22.302966Z"
+     "end_time": "2020-01-03T09:09:37.223418Z",
+     "start_time": "2020-01-03T09:09:37.215417Z"
     }
    },
    "outputs": [],
@@ -336,8 +336,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-31T14:38:28.165568Z",
-     "start_time": "2019-12-31T14:38:28.159575Z"
+     "end_time": "2020-01-03T09:09:40.468049Z",
+     "start_time": "2020-01-03T09:09:40.463079Z"
     }
    },
    "outputs": [],
@@ -355,8 +355,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-31T14:38:30.044005Z",
-     "start_time": "2019-12-31T14:38:30.039977Z"
+     "end_time": "2020-01-03T09:09:42.718979Z",
+     "start_time": "2020-01-03T09:09:42.713978Z"
     }
    },
    "outputs": [],
@@ -385,8 +385,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-31T14:38:35.155769Z",
-     "start_time": "2019-12-31T14:38:34.103143Z"
+     "end_time": "2020-01-03T09:09:46.972216Z",
+     "start_time": "2020-01-03T09:09:44.850461Z"
     }
    },
    "outputs": [],
@@ -412,8 +412,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-31T15:33:08.322962Z",
-     "start_time": "2019-12-31T15:33:08.310982Z"
+     "end_time": "2020-01-03T09:09:50.124116Z",
+     "start_time": "2020-01-03T09:09:48.603440Z"
     }
    },
    "outputs": [],
@@ -423,9 +423,106 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-01-03T09:10:25.255688Z",
+     "start_time": "2020-01-03T09:10:25.251690Z"
+    }
+   },
+   "source": [
+    "## Run published pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Submit"
+    "### Publish the pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When the pipeline is published, it's visible on the list of Pipelines (in the Azure Portal). However it's not visible in the new studio (preview) :/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-01-03T09:11:48.777023Z",
+     "start_time": "2020-01-03T09:11:43.829800Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "published_pipeline1 = pipeline1.publish(name=\"My_New_Pipeline\", \n",
+    "                                        description=\"My Published Pipeline Description\", \n",
+    "                                        continue_on_step_failure=True)\n",
+    "published_pipeline1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-01-03T09:19:24.729612Z",
+     "start_time": "2020-01-03T09:19:24.726646Z"
+    }
+   },
+   "source": [
+    "#### Get published Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-01-03T09:19:30.344276Z",
+     "start_time": "2020-01-03T09:19:29.198275Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from azureml.pipeline.core import PublishedPipeline\n",
+    "\n",
+    "pipeline_id = published_pipeline1.id # use your published pipeline id\n",
+    "published_pipeline = PublishedPipeline.get(ws, pipeline_id)\n",
+    "published_pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Submit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-01-03T09:30:28.418579Z",
+     "start_time": "2020-01-03T09:30:18.922709Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from azureml.core import Experiment\n",
+    "\n",
+    "experiment = Experiment(ws, 'Compare_Models_Exp')\n",
+    "pipeline_run = experiment.submit(published_pipeline, regenerate_outputs=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (Alternative) Submit pipeline without publishing"
    ]
   },
   {
@@ -442,7 +539,8 @@
     "from azureml.core import Experiment\n",
     "\n",
     "# Submit the pipeline to be run\n",
-    "pipeline_run1 = Experiment(ws, 'Compare_Models_Exp').submit(pipeline1, regenerate_outputs=False)\n",
+    "experiment = Experiment(ws, 'Compare_Models_Exp')\n",
+    "pipeline_run1 = experiment.submit(pipeline1, regenerate_outputs=False)\n",
     "pipeline_run1.wait_for_completion()"
    ]
   },
